# claude-code-plugins

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
plugins/status-line/: .gitignore  LICENSE  README.md  config.json  pyproject.toml
plugins/status-line/.claude-plugin/: plugin.json
plugins/status-line/commands/: configure.md  setup.md
plugins/status-line/scripts/: install.ps1  install.sh
plugins/status-line/src/: statusline.py
plugins/status-line/src/hud/: __init__.py  __main__.py  bars.py  cli.py  colors.py  config.py  data.py  formatting.py  gitinfo.py  render.py
plugins/status-line/tests/: _path.py  test_bars.py  test_cli.py  test_colors.py  test_config.py  test_data.py  test_formatting.py  test_gitinfo.py  test_render.py
