[project]
name = "status-line"
version = "0.1.0"
description = "Configurable status-line HUD for Claude Code (pure Python, stdlib only)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

# Exposes a `status-line` command (and `python -m hud`) once installed.
# The runtime needs only the standard library; installing simply pins an
# interpreter and provides a console entry point. Claude Code can also run
# src/statusline.py directly with any Python 3.8+ - no install required.
[project.scripts]
status-line = "hud.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hud"]
